<resources>
    <string name="app_name">masvs_crypto</string>
    <string name="maswe_0009">maswe_0009</string>
    <string name="maswe_0010">maswe_0010</string>
    <string name="maswe_0011">maswe_0011</string>
    <string name="maswe_0012">maswe_0012</string>
    <string name="maswe_0014">maswe_0014</string>
    <string name="maswe_0015">maswe_0015</string>
    <string name="maswe_0016">maswe_0016</string>
    <string name="maswe_0017">maswe_0017</string>
    <string name="maswe_0018">maswe_0018</string>
    <string name="maswe_0019">maswe_0019</string>
    <string name="maswe_0020">maswe_0020</string>
    <string name="maswe_0021">maswe_0021</string>
    <string name="maswe_0022">maswe_0022</string>
    <string name="maswe_0023">maswe_0023</string>
    <string name="maswe_0024">maswe_0024</string>
    <string name="maswe_0025">maswe_0025</string>
    <string name="maswe_0026">maswe_0026</string>
    <string name="maswe_0027">maswe_0027</string>
    <string name="send_bank_command">Send Bank Command</string>
    <string name="bank_balance_input">Amount (+/-) for balance change</string>
    <string name="bank_balance_display">Balance: </string>
</resources>