<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.dkronig.masvs_crypto.CryptoMenu">

    <LinearLayout
        android:id="@+id/ll_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/regular_top_spacing">

        <!-- Crypto Menu Title -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_spacing_below_title"
            android:text="@string/menu_choose_vulnerability"
            android:textSize="@dimen/text_size_title" />

        <!-- MASWE-0009 Button -->
        <Button
            android:id="@+id/maswe_0009_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_spacing_below_title"
            android:text="@string/maswe_0009" />

        <!-- MASWE-0010 Button -->
        <Button
            android:id="@+id/maswe_0010_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0010" />

        <!-- MASWE-0011 Button -->
        <Button
            android:id="@+id/maswe_0011_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0011" />

        <!-- MASWE-0012 Button -->
        <Button
            android:id="@+id/maswe_0012_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0012" />

        <!-- MASWE-0014 Button -->
        <Button
            android:id="@+id/maswe_0014_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0014" />

        <!-- MASWE-0015 Button -->
        <Button
            android:id="@+id/maswe_0015_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0015" />

        <!-- MASWE-0016 Button -->
        <Button
            android:id="@+id/maswe_0016_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0016" />

        <!-- MASWE-0017 Button -->
        <Button
            android:id="@+id/maswe_0017_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0017" />

        <!-- MASWE-0018 Button -->
        <Button
            android:id="@+id/maswe_0018_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0018" />

        <!-- MASWE-0019 Button -->
        <Button
            android:id="@+id/maswe_0019_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0019" />

        <!-- MASWE-0020 Button -->
        <Button
            android:id="@+id/maswe_0020_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0020" />

        <!-- MASWE-0021 Button -->
        <Button
            android:id="@+id/maswe_0021_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0021" />

        <!-- MASWE-0022 Button -->
        <Button
            android:id="@+id/maswe_0022_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0022" />

        <!-- MASWE-0023 Button -->
        <Button
            android:id="@+id/maswe_0023_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0023" />

        <!-- MASWE-0024 Button -->
        <Button
            android:id="@+id/maswe_0024_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0024" />

        <!-- MASWE-0025 Button -->
        <Button
            android:id="@+id/maswe_0025_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0025" />

        <!-- MASWE-0026 Button -->
        <Button
            android:id="@+id/maswe_0026_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0026" />

        <!-- MASWE-0027 Button -->
        <Button
            android:id="@+id/maswe_0027_button"
            android:layout_width="@dimen/maswe_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regular_top_spacing"
            android:text="@string/maswe_0027" />

    </LinearLayout>

</ScrollView>